refactored the code to organize the packages.